# sqfts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: wiki-sync.yml
crates/comref-extract/: Cargo.toml
crates/comref-extract/src/: corpus.rs  diff.rs  emit.rs  lib.rs  main.rs  model.rs  parse.rs  report.rs  types.rs  wiki_upstream.rs
crates/comref-extract/tests/: golden.rs
crates/comref-extract/tests/fixtures/: a && b.md  addAction.md  alive.md  call.md  count.md  createVehicle.md  forEach.md  getPos.md  if.md  params.md  player.md  private.md  remoteExec.md  select.md  setDamage.md  spawn.md  time.md  waves.md  while.md
crates/hemtt-sqf/: Cargo.toml  UPSTREAM.md
crates/sqfts-check/: Cargo.toml
crates/sqfts-check/examples/: diag_spans.rs  hemtt_spans.rs  ret_debug.rs
crates/sqfts-check/src/: assignability.rs  checker.rs  config.rs  decls.rs  diagnostics.rs  lib.rs  symbols.rs
crates/sqfts-cli/: Cargo.toml
crates/sqfts-cli/src/: main.rs  report.rs
crates/sqfts-cli/tests/: cli.rs
crates/sqfts-cli/tests/fixtures/: fn_impoundVehicle.sqfts  macro_typed.sqfts  mission.d.sqfts  plain.sqf  sqfts.toml
crates/sqfts-cli/tests/fixtures/include_mission/: macro.h  sqfts.toml
crates/sqfts-cli/tests/fixtures/include_mission/core/functions/: fn_includePath.sqfts  fn_relativeInclude.sqfts
crates/sqfts-cli/tests/fixtures/include_mission/include/: shared.h
crates/sqfts-db/: Cargo.toml
crates/sqfts-db/examples/: dump_command_names.rs
crates/sqfts-db/src/: convert.rs  database.rs  lib.rs  overlay.rs
crates/sqfts-lsp/: Cargo.toml
crates/sqfts-lsp/src/: backend.rs  lib.rs  line_index.rs  main.rs
crates/sqfts-project/: Cargo.toml
crates/sqfts-project/src/: config.rs  declgen.rs  discovery.rs  emit.rs  lib.rs  project.rs
crates/sqfts-syntax/: Cargo.toml
crates/sqfts-syntax/examples/: span_debug.rs
crates/sqfts-syntax/src/: erase.rs  lib.rs  scan.rs  typ.rs  type_parser.rs
docs/: Adoption-Guide.md  Annotating-Variables.md  Architecture.md  Arrays-Tuples-and-Brands.md  Basic-Concepts.md  CLI-Reference.md  Casts.md  Configuration.md  Configuring-Your-Project.md  Declaration-Files.md  Declaring-Functions-and-Globals.md  Declgen.md  Diagnostics.md  Editor-Support.md  Engine-Command-Database.md  Erasure.md  Everyday-Types.md  FAQ.md  Future-Work.md  Getting-Started.md  Grammar.md  Home.md  Interfaces.md  Literal-Types.md  Missing-Features.md  Strictness-Flags.md  Type-Aliases.md  Type-Checking.md  Typed-Params.md  Unions-and-Narrowing.md  Wiki-Upload.md  _Sidebar.md
docs/design-history/: README.md  language-specification.md  original-readme.md  phase-1-and-language-design.md  phase-3-compiler-toolchain.md  phase-3-original-toolchain-plan.md  phase-4-implementation.md
editors/vscode/: .gitignore  README.md  package-lock.json  package.json
editors/vscode/scripts/: copy-server.js  gen-grammar-commands.js
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: engine-commands.tmLanguage.json  sqfts.tmLanguage.json
examples/: showcase.sqfts
