[package]
name = "comref-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extract typed SQF engine-command signatures from a COMREF-md corpus"

[[bin]]
name = "comref-extract"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
percent-encoding.workspace = true
regex.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
pretty_assertions = "1"
