[package]
name = "sqfts-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine-command type database (arma3-wiki + Phase 1 overlay)"

[dependencies]
arma3-wiki.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sqfts-syntax.workspace = true
float-ord.workspace = true
thiserror.workspace = true
anyhow.workspace = true
