[package]
name = "sqfts-project"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQFts project config, discovery, and shared check session"

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde.workspace = true
sqfts-check.workspace = true
sqfts-db.workspace = true
sqfts-syntax.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
